# Data_scout

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  design 6.40.40 PM.md  docker-compose.dev.yml  docker-compose.yml  output.json  pyproject.toml  requirements-dev.txt  requirements.md  requirements.txt  test_invoke.py  walkthrough.md.resolved
.github/: PULL_REQUEST_TEMPLATE.md
DOCS/: API_SPEC.md  ARCHITECTURE.md  DATA_PIPELINE.md  DEPLOYMENT.md  FOLDER_STRUCTURE.md  FRONTEND_DESIGN.md  FRONTEND_SPEC.md  IMPLEMENTATION_PLAN.md  ML_PIPELINE.md  PRD.md  RAG_CHATBOT.md  RISKS.md  ROADMAP.md  SECURITY.md  TEST_PLAN.md
Docs/: api_integration.md  aws_info.md  aws_infrastructure_guide.md  bedrock_deployment_checklist.md  data_pipeline.md  deployment.docx  deployment.md  deployment_steps.md  folder_structure.md  frontend_design.md  frontend_spec.md  guide.md  hackathon_presentation_guide.docx  hackathon_presentation_guide.md  implementation.md  prd.md  report.md  roadmap.md  setup.md  switching_to_real_data.md  test_plan.md
backend/: Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
cloudformation/: datascout-stack.yaml
demo/: demo_script.md
frontend/: Dockerfile
lambda_function/: handler.py  requirements.txt
nginx/: nginx.conf
others/: implementation_plan.docx
scripts/: create_buckets.sh  create_iam_roles.sh  create_superuser.py  healthcheck.sh  migrate.sh  run_demo.py  seed_db.py  seed_demo_data.py  setup_agent.sh
streamlit_app/: __init__.py  app.py  config.py
tests/: __init__.py  conftest.py
(+200 files in other folders)
